add "can_execute" options, to be able to block the execution of new process (to use when a delivery is in progress)

--- a/Resources/config/spipu_configuration.yaml
+++ b/Resources/config/spipu_configuration.yaml
@@ -45,6 +45,12 @@ spipu_configuration:
         required: true
         default:  "0"
 
+    process.task.can_execute:
+        type:     select
+        options:  Spipu\UiBundle\Form\Options\ActiveStatus
+        required: true
+        default:  "1"
+
     process.task.automatic_rerun:
         type:     select
         options:  Spipu\UiBundle\Form\Options\ActiveStatus
