--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "ext-pdo": "*",
+        "ext-json": "*",
         "ext-posix": "*",
         "symfony/framework-bundle": "^5.4",
         "spipu/ui-bundle": "^2.0",
