--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "ext-pdo": "*",
         "ext-json": "*",
         "ext-posix": "*",
