--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -22,6 +22,13 @@ services:
         arguments:
             $container: '@service_container'
 
+    # File Manager
+    Spipu\ProcessBundle\Service\FileManagerInterface:
+        class: Spipu\ProcessBundle\Service\FileManager
+        arguments:
+            $folderImport: '%kernel.project_dir%/var/import/'
+            $folderExport: '%kernel.project_dir%/var/export/'
+
     # Steps
     Spipu\ProcessBundle\Step\:
         resource: '../../Step/*'
