--- a/Resources/config/spipu_configuration.yaml
+++ b/Resources/config/spipu_configuration.yaml
@@ -6,12 +6,12 @@ spipu_configuration:
         unit:     "file(s)"
 
     process.folder.export:
-        type:     "string"
+        type:     string
         required: true
         default:  "%kernel.project_dir%/var/export/"
 
     process.folder.import:
-        type:     "string"
+        type:     string
         required: true
         default:  "%kernel.project_dir%/var/import/"
 
@@ -67,6 +67,13 @@ spipu_configuration:
         required: true
         default:  "5"
         unit:     "minute(s)"
+
+    process.task.force_schedule_for_async:
+        type:     select
+        options:  Spipu\UiBundle\Form\Options\ActiveStatus
+        required: true
+        default:  "0"
+        help:     "force schedule for asynchronous task execution"
 
     process.failed.send_email:
         type:     select
