update to last version of symfony 6.4 and doctrine 3

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-pdo": "*",
         "ext-json": "*",
         "ext-posix": "*",
+        "doctrine/orm-bundle": "^3.0",
         "symfony/framework-bundle": "^6.4",
         "spipu/ui-bundle": "^4.0",
         "spipu/configuration-bundle": "^4.0"
